<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.kai.capstone_rapidresq.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

<!--    <fragment-->
<!--        android:id="@+id/autocomplete_fragment"-->
<!--        android:name="com.kai.capstone_rapidresq.ui.home.HomeFragment"-->
<!--        android:label="@string/search"-->
<!--        tools:layout="@layout/places_autocomplete_fragment"/>-->

    <fragment
        android:id="@+id/navigation_add"
        android:name="com.kai.capstone_rapidresq.ui.add.AddFragment"
        android:label="@string/title_add"
        tools:layout="@layout/fragment_add" />

    <fragment
        android:id="@+id/navigation_article"
        android:name="com.kai.capstone_rapidresq.ui.article.ArticleFragment"
        android:label="@string/article"
        tools:layout="@layout/fragment_article">
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.kai.capstone_rapidresq.ui.profiles.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>